--- a/NewSum_WinStore/pages/about/about.html
+++ b/NewSum_WinStore/pages/about/about.html
@@ -24,10 +24,10 @@
         <section aria-label="Main content" role="main">
             
             <div>
-                Το newSum είναι μια εφαρμογή που δημιουργεί περιλήψεις των ειδήσεων από πολλές πηγές σε ένα ενιαίο κείμενο!<br/>
+                Το NewSum είναι μια εφαρμογή που δημιουργεί περιλήψεις των ειδήσεων από πολλές πηγές σε ένα ενιαίο κείμενο!<br/>
                 Πρόκειται για ένα ευφυές κολάζ από όλες τις διαφορετικές πληροφορίες που θα είχατε αν διαβάζατε όλα τα άρθρα,<br/>
                 από όλες τις πηγές (αν και όταν θα είχατε το χρόνο!).<br/><br/>
-                Το newSum αξιοποιεί κορυφαία τεχνολογία τεχνητής νοημοσύνης  για να κάνει σύνοψη πληροφοριών, ξεχωρίζοντας τα πράγματα που διαφέρουν από τον πλεονασμό.<br/>
+                Το NewSum αξιοποιεί κορυφαία τεχνολογία τεχνητής νοημοσύνης  για να κάνει σύνοψη πληροφοριών, ξεχωρίζοντας τα πράγματα που διαφέρουν από τον πλεονασμό.<br/>
                 Είναι υλοποιημένο απο την μη κερδοσκοπική οργάνωση <a href="http://www.scify.org">SciFy</a>  σε συνεργασία με το Ινστιτούτο Πληροφορικής & Τηλεπικοινωνιών του <a href="http://www.demokritos.gr/">ΕΚΕΦΕ «Δημόκριτος»</a>,<br/>
                 ενώ το γραφικό περιβάλλον για windows 8 έγινε απο τον  <a href="http://gr.linkedin.com/in/atzoumas/">Αλέξανδρο Τζούμα</a> (<a href="https://twitter.com/AlxJoom">@AlxJoom</a>)
             </div>
