--- a/NewSum_WinStore/pages/about/about.html
+++ b/NewSum_WinStore/pages/about/about.html
@@ -38,6 +38,15 @@
             <br/>
             <br/>
             <br/>
+            <div>
+                <h2>Προστασία Προσωπικών Δεδομένων (privacy policy)</h2>
+                Το NewSum δε συλλέγει προσωπικά δεδομένα των επισκεπτών του.
+            </div>
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+            <br/>
             <br/>
             Οι φωτογραφίες που εμφανίζονται στις κατηγορίες βρίσκονται στα ακόλουθα links :
             <ul>
