--- a/NewSum_WinStore/default.html
+++ b/NewSum_WinStore/default.html
@@ -18,7 +18,18 @@
 </head>
 <body>
     <div id="contenthost" data-win-control="Application.PageControlNavigator" data-win-options="{home: '/pages/items/items.html'}"></div>
-
+    
+    <div data-win-control="WinJS.UI.SettingsFlyout" data-win-options="{settingsCommandId:'privacy', width:'narrow'}">
+        <div class="win-ui-dark win-header">
+            <button type="button" onclick="WinJS.UI.SettingsFlyout.show()" class="win-backbutton"></button>
+            <div class="win-label">Privacy Policy</div>
+        </div>
+        <div class="win-content win-settings-section">
+            Το NewSum δεν καταγράφει ούτε χρησιμοποιεί προσωπικά δεδομένα των χρηστών του.
+            <br/>
+            Σε περίπτωση αλλαγής της Πολιτικής Απορρήτου θα υπάρξει αντίστοιχη ενήμερωση.
+        </div>
+    </div>
 
     <div id="appbar" data-win-control="WinJS.UI.AppBar" data-win-options="" style="visibility: hidden;">
         <button data-win-control="WinJS.UI.AppBarCommand"
