store selected language to local settings

--- a/NewSum_WinStore/pages/settings/settings.html
+++ b/NewSum_WinStore/pages/settings/settings.html
@@ -15,9 +15,9 @@
         </div>
          <div class="win-content win-settings-section">
               <h3>Change language</h3>
-             <input type="radio" name="language" value="en-us"/><label>English</label>
+             <input id="en-us" type="radio" name="language" value="en-us"/><label for="en-us">English</label>
              <br />
-             <input type="radio" name="language" value="el-gr"/><label>Greek</label>
+             <input  id="el-gr" type="radio" name="language" value="el-gr"/><label for="el-gr">Greek</label>
              
          </div>
     </div>
